--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,8 +1,7 @@
 <hero [hero]="selectedHero"></hero>
 
-<!-- let hero of heroes in latest beta -->
 <ul class="heroes">
-    <li *ngFor="#hero of heroes"
+    <li *ngFor="let hero of heroes"
         (click) = "onSelect(hero)"
         [class.selected]="hero===selectedHero">
     <span class="badge">{{hero.id}}</span> {{hero.name}}
